# FOMO-project

./: .gitignore  DINO+TINYCLIP.py  DINO_TEST.py  Import_features.py  TINY_CLIP_TEST.py  adapter_testing.py  adapter_training.py  adapter_training_text.py  config.yaml  dino_to_clip_adapter_simple_linear.pt  eval_all.py  eval_all_text.py  eval_imagenet.py  pyproject.toml  requirements.txt  test_dataloader.py  visualize_alignment.py
configs/: flickr30k.example.yaml  imagenet1k.example.yaml  laion1m.example.yaml
data_pipeline/: __init__.py  build_metadata.py  config.py  create_local_config.py  data_loader.py  embedding_utils.py  generate_image_embeddings.py  generate_streaming_features.py  generate_text_embeddings.py  paths.py  publish_hf_dataset.py  run_pipeline.py  run_prepare_flickr30k.py  runtime.py  schema.py  splits.py  validate_metadata.py
data_pipeline/sources/: hf_flickr30k.py  hf_imagenet1k.py  hf_table.py
models/arch-deep_residual_bs8192_lr0p0005_wd0p05_val0p02_es-p10-d0p001/: metrics.yaml
models/arch-mlp_2_layer_mlp/: dino_to_clip_adapter_mlp_2layer.pt
models/arch-mlp_3layer_bs8192_lr0p001_wd0p01_val0p02_es-p10-d0p001/: config.yaml  metrics.yaml
models/arch-mlp_3layer_bs8192_lr0p002_wd0p01_val0p02_es-p10-d0p001/: config.yaml  metrics.yaml
models/arch-simple_linear_bs8192_lr0p002_wd0p01_val0p02_es-p10-d0p001/: best.pt  config.yaml  last.pt  metrics.yaml
models/text_adapter-arch-deep_residual_bs8192_lr0p0005_wd0p05_val0p02_es-p10-d0p001/: config.yaml  metrics.yaml
models/text_adapter-arch-mlp_3layer_bs8192_lr0p001_wd0p05_val0p02_es-p10-d0p001/: config.yaml  metrics.yaml
testing/: load_hf_datasets.py  testing_functions.py
(+20 files in other folders)
